--- a/install_libvirt_kvm_simulation.yml
+++ b/install_libvirt_kvm_simulation.yml
@@ -4,7 +4,7 @@
   - name: "Determining Whether Host is Supported or Not..."
     command: uname -a
     failed_when: (ansible_distribution == "Ubuntu" and ansible_distribution_version == "14.04") and
-                 (ansible_distribution == "Ubuntu" and ansible_distribution_version == "16.04") and
+                 (ansible_distribution == "Ubuntu" and ansible_distribution_version == "16.04")
 
 
   - name: Add additional repo for libvirt tunnels
