--- a/basic_ansible/configure_ntp.yaml
+++ b/basic_ansible/configure_ntp.yaml
@@ -4,6 +4,9 @@
   become: yes
   become_method: sudo
   tasks:
+    - name: Install NTP
+      apt: name=ntp update_cache=yes
+
     - name: Write Timezone File
       # Choose a Timezone from the list here --> https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
       lineinfile: dest=/etc/timezone line="America/New York"
