--- a/basic_ansible/configure_ntp.yaml
+++ b/basic_ansible/configure_ntp.yaml
@@ -17,3 +17,7 @@
 
     - name: Generate and Push NTP Config File
       template: src=./files/ntp.conf.j2 dest=/etc/ntp.conf
+
+    - name: Restart NTP Service           
+      service: name=ntp state=restarted
+
